fix: add user id to cookie
